# eyre

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release-plz.yml
color-eyre/: CHANGELOG.md  Cargo.toml  README.md
color-eyre/.github/workflows/: ci.yml
color-eyre/examples/: custom_filter.rs  custom_section.rs  debug_perf.rs  github_issue.rs  multiple_errors.rs  multiple_reports.rs  multiple_reports_lazy.rs  panic_compose.rs  panic_hook.rs  pre_hook_callbacks.rs  theme.rs  theme_test_helper.rs  usage.rs
color-eyre/scripts/: fix_html_examples.py
color-eyre/src/: config.rs  fmt.rs  handler.rs  lib.rs  sealed.rs  writers.rs
color-eyre/src/section/: github.rs  help.rs  mod.rs
color-eyre/tests/: bt_disabled.rs  bt_enabled.rs  location_disabled.rs  stacktrace.rs  theme.rs  wasm.rs
color-eyre/tests/data/: theme_error_control.txt  theme_error_control_location.txt  theme_error_control_minimal.txt  theme_error_control_spantrace.txt  theme_panic_control.txt  theme_panic_control_no_spantrace.txt
color-spantrace/: CHANGELOG.md  Cargo.toml  README.md  build.rs
color-spantrace/src/: lib.rs
color-spantrace/tests/: themes.rs
examples/: custom_filter.rs  custom_section.rs  debug_perf.rs  github_issue.rs  multiple_errors.rs  panic_compose.rs  panic_hook.rs  theme.rs  theme_test_helper.rs  usage.rs
eyre/: CHANGELOG.md  Cargo.toml  build.rs
eyre/examples/: custom_handler.rs  eyre-usage.rs
eyre/src/: backtrace.rs  builder.rs  chain.rs  compat.rs  context.rs  error.rs  fmt.rs  kind.rs  lib.rs  macros.rs  option.rs  ptr.rs  vtable.rs  wrapper.rs
eyre/src/error/: pyo3_compat.rs  serialize.rs
eyre/tests/: compiletest.rs  generic_member_access.rs  test_anyhow.rs  test_anyhow_compat.rs  test_backtrace.rs  test_boxed.rs  test_chain.rs  test_context.rs  test_context_access.rs  test_downcast.rs  test_fmt.rs  test_location.rs  test_macros.rs  test_no_install.rs  test_option.rs  test_pyo3.rs  test_repr.rs  test_source.rs  test_toolchain.rs
eyre/tests/common/: mod.rs
eyre/tests/drop/: mod.rs
eyre/tests/ui/: ui_test_backtrace.rs  ui_test_backtrace.stderr
simple-eyre/: CHANGELOG.md  Cargo.toml  README.md
simple-eyre/src/: lib.rs
src/: backtrace.rs  chain.rs  config.rs  context.rs  error.rs  fmt.rs  handler.rs  help.rs  kind.rs  lib.rs  macros.rs  private.rs  ptr.rs  wrapper.rs  writers.rs
src/error/: pyo3_compat.rs
src/guide/: customization.rs  mod.rs
src/section/: github.rs  help.rs  mod.rs
tests/: minimal.rs  test_autotrait.rs  test_backtrace.rs  test_boxed.rs  test_chain.rs  test_context.rs  test_convert.rs  test_downcast.rs  test_fmt.rs  test_location.rs  test_macros.rs  test_no_install.rs  test_pyo3.rs  test_repr.rs  test_source.rs  theme.rs  themes.rs
tests/common/: mod.rs
tests/data/: theme_control.txt  theme_error_control.txt  theme_error_control_location.txt  theme_error_control_minimal.txt  theme_error_control_spantrace.txt  theme_panic_control.txt  theme_panic_control_no_spantrace.txt
tests/ui/: no-impl.stderr
