[workspace]
members = [
  "color-eyre",
  "color-spantrace",
  "eyre"
]

[workspace.package]
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eyre-rs/eyre"
readme = "README.md"
rust-version = "1.65.0"

[workspace.dependencies]
indenter = "0.3.0"
once_cell = "1.18.0"
owo-colors = "4.0"
autocfg = "1.0"
anyhow = "1.0"

[profile.dev.package.backtrace]
opt-level = 3


