[workspace]
members = [
  "color-eyre",
  "color-spantrace",
  "eyre",
  "simple-eyre",
]

[workspace.package]
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eyre-rs/eyre"
readme = "README.md"
rust-version = "1.85.0"
include = ["README.md", "LICENSE-APACHE", "LICENSE-MIT", "build.rs", "Cargo.toml", "src/**/*.rs"]

[workspace.dependencies]
indenter = "0.3.0"
owo-colors = "4.3"
autocfg = "1.0"

[profile.dev.package.backtrace]
opt-level = 3

