[workspace]
resolver = "2"
members = [
  "color-eyre",
  "color-spantrace",
  "eyre",
  "simple-eyre",
]

[workspace.package]
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eyre-rs/eyre"
readme = "README.md"
rust-version = "1.85.0"
include = ["README.md", "LICENSE-APACHE", "LICENSE-MIT", "build.rs", "Cargo.toml", "src/**/*.rs"]

[workspace.dependencies]
indenter = "0.3.0"
owo-colors = "4.3"
autocfg = "1.0"
tracing-error = "0.2.0"
tracing-core = "0.1.21"
backtrace = "0.3.59"
url = "2.1.1"

# dev-dependencies
futures = { version = "0.3", default-features = false }
rustversion = "1.0"
thiserror = "2.0"
trybuild = "1.0.116"
anyhow = "1.0.28"
syn = { version = "2.0", features = ["full"] }
wasm-bindgen-test = "0.3.15"
tracing-subscriber = "0.3.20"
tracing = "0.1.29"
ansi-parser = "0.9" # used for testing color schemes
pretty_assertions = "1.0.0"

[profile.dev.package.backtrace]
opt-level = 3

