[package]
name = "color-eyre"
version = "0.6.5"
description = "An error report handler for panics and eyre::Reports for colorful, consistent, and well formatted error reports for all kinds of errors."
documentation = "https://docs.rs/color-eyre"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
include = { workspace = true }

[features]
default = ["track-caller", "capture-spantrace"]
capture-spantrace = ["tracing-error", "color-spantrace"]
issue-url = ["url"]
track-caller = []

[dependencies]
eyre = { version = "1", path = "../eyre" }
tracing-error = { workspace = true, optional = true }
backtrace = { workspace = true }
indenter = { workspace = true }
owo-colors = { workspace = true }
color-spantrace = { version = "0.3", path = "../color-spantrace", optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
pretty_assertions = { workspace = true }
thiserror = { workspace = true }
ansi-parser = { workspace = true }
rustversion = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "color-eyre-usage"
path = "examples/usage.rs"
