[package]
name = "color-spantrace"
version = "0.3.0"
description = "A pretty printer for tracing_error::SpanTrace based on color-backtrace"
documentation = "https://docs.rs/color-spantrace"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
include = { workspace = true }

[dependencies]
tracing-error = { workspace = true }
tracing-core = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
ansi-parser = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
