[package]
name = "eyre"
version = "1.0.0"
description = "Flexible concrete Error Reporting type built on std::error::Error with customizable Reports"
documentation = "https://docs.rs/eyre"
categories = ["rust-patterns"]

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
include = { workspace = true }

[features]
default = ["auto-install", "track-caller"]
anyhow = []
auto-install = []
track-caller = []

[dependencies]
indenter = { workspace = true }

[build-dependencies]
autocfg = { workspace = true }

[dev-dependencies]
futures = { workspace = true, default-features = false }
rustversion = { workspace = true }
thiserror = { workspace = true }
trybuild = { workspace = true, features = ["diff"] } # pinned due to MSRV
backtrace = { workspace = true }
anyhow = { workspace = true }
syn = { workspace = true, features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

