[package]
name = "simple-eyre"
version = "0.3.1"
description = "One of the simplest error reporters one can build ontop of eyre, defining only an error report"
documentation = "https://docs.rs/simple-eyre"

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
include = { workspace = true }

[dependencies]
eyre = { version = "1", path = "../eyre" }
indenter = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]